--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,12 +3,7 @@ name: Deploy to Firebase Hosting
 on:
   push:
     branches:
-      - staging
-  pull_request:
-    branches:
       - main
-      - staging
-  workflow_dispatch:
 
 permissions:
   actions: read
@@ -54,15 +49,6 @@ jobs:
         uses: w9jds/firebase-action@master
         if: ${{ github.event_name != 'pull_request' }}
         with:
-          args: deploy --only hosting:${{ env.TARGET }}
+          args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-
-      - name: Preview Firebase
-        uses: FirebaseExtended/action-hosting-deploy@v0
-        if: ${{ github.event_name == 'pull_request' }}
-        with:
-          repoToken: '${{ github.token }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
-          expires: 7d
-          target: ${{ env.TARGET }}
